# NES-Emulator

./: .gitignore  CMakeLists.txt  README.md
include/: App.h  Constants.h  Decode.h  NES_APU.h  NES_CPU.h  NES_CPUdebug.h  NES_PPU.h  NES_PPUdebug.h  Opcodes.h  Render.h
resource/: compareLogs.py  correctTestLog.txt  cpuTrace.txt
resources/: correctTestLog.txt  ppuTrace.txt
src/: App.cpp  Decode.cpp  IllegalOpcodes.cpp  LegalOpcodes.cpp  NES_APU.cpp  NES_CPU.cpp  NES_CPUdebug.cpp  NES_PPU.cpp  NES_PPUdebug.cpp  Render.cpp  main.cpp
